# fluxbox

./: README.md  XresourcesAdd  bashrcAdd  bluetooth.sh  conkyrc  createbbdockrc.sh  fehstart.sh  getfromyay-arco.sh  getfromyay.sh  init-arco  init-arco.sh  init.sh  jgmenu.sh  mopeninit.sh  mopenstart.sh  oblogout.conf  printer.sh  start-arco.sh  start.sh  xinitrc
fbpanel/: abc  default
fluxbox/: init  keys  menu  menu FAQ  menu-mine  menuCopy  my-menu  overlay  startup  xdg FAQ  xdgmenu
fluxbox/styles/: config
fluxbox/styles/Adapta/: theme.cfg
fluxbox/styles/Adapta-Eta/: theme.cfg
fluxbox/styles/Adwaita/: theme.cfg
fluxbox/styles/Arc-Dark/: theme.cfg
fluxbox/styles/Batti/: theme.cfg
fluxbox/styles/BlackWhite/: theme.cfg
fluxbox/styles/Bodacious/: readme.txt  terminal_bg.xpm  theme.cfg
fluxbox/styles/Bodacious/pixmaps/: close-bg.xpm  close-pressed.xpm  iconify-bg.xpm  iconify-pressed.xpm  iconify.xpm  maximize-bg.xpm  maximize-pressed.xpm  stick-pressed.xpm  stick.xpm  stuck.xpm
fluxbox/styles/Cilia/: theme.cfg
fluxbox/styles/Cilia/pixmaps/: close.xpm  maximize.xpm
fluxbox/styles/Intuition/: theme.cfg
fluxbox/styles/Macbird/: theme.cfg
fluxbox/styles/Mavericks/: theme.cfg
fluxbox/styles/Mavericks/pixmaps/: close.xpm  inative.xpm  max.xpm  min.xpm  stick.xpm  stuck.xpm
fluxbox/styles/Unicorn/: theme.cfg
fluxbox/styles/WFLux 2/: theme.cfg
fluxbox/styles/flux-numix/: theme.cfg
fluxbox/styles/gnuas_mk3/: theme.cfg
fluxbox/styles/gnuce-midnightblue/: theme.cfg
fluxbox/styles/gnuce-midnightblue/pixmaps/: czer.xpm  pom.xpm  szar.xpm  ziel.xpm
fluxbox/styles/metak-e17/: theme.cfg
fluxbox/styles/orangeos/: theme.cfg
fluxbox/styles/pebbles-ambiance/: theme.cfg
fluxbox/styles/pebbles-ambiance/pixmaps/: button_border.xpm  closefcs.xpm  closepr.xpm  closeufcs.xpm  maxfcs.xpm  maxpr.xpm  maxufcs.xpm  selectedfcs.xpm  selectedufcs.xpm  shadefcs.xpm  shadepr.xpm  shadeufcs.xpm  stickpr.xpm  stuckfcs.xpm  stuckufcs.xpm  unshadefcs.xpm  unshadepr.xpm  unshadeufcs.xpm
fluxbox/styles/pebbles-ambiance/script/: button_border  closefcs_custom.xpm  closefcs_original.xpm  closeufcs_custom.xpm  colorize_buttons  create_pixmaps  maxpr_custom.xpm  maxufcs_custom.xpm  shadefcs_custom.xpm  shadefcs_original.xpm  shadeufcs_custom.xpm  stuckfcs_custom.xpm  stuckufcs_custom.xpm  unshadepr_custom.xpm  unshadeufcs_custom.xpm
fluxbox/styles/pebbles-cook/: theme.cfg
fluxbox/styles/pebbles-cook/pixmaps/: button_border.xpm  closefcs.xpm  closepr.xpm  closeufcs.xpm  maxfcs.xpm  maxpr.xpm  maxufcs.xpm  selectedufcs.xpm  shadefcs.xpm  shadepr.xpm  shadeufcs.xpm  stickpr.xpm  stuckfcs.xpm  stuckufcs.xpm  unshadefcs.xpm  unshadepr.xpm  unshadeufcs.xpm
fluxbox/styles/pebbles-cook/script/: button_border  closefcs_custom.xpm  closeufcs_custom.xpm  colorize_buttons  create_pixmaps  maxfcs_custom.xpm  maxpr_custom.xpm  maxufcs_custom.xpm  shadepr_custom.xpm  shadeufcs_custom.xpm  stuckfcs_custom.xpm  stuckufcs_custom.xpm  unshadefcs_custom.xpm  unshadefcs_original.xpm  unshadeufcs_custom.xpm
fluxbox/styles/zukitre-fluxbox/: theme.cfg
fluxbox/styles/zukitre-fluxbox/pixmaps/: max.xpm  menuicon-pressed.xpm  menuicon.xpm  min-pressed.xpm  shade-pressed.xpm  stick-pressed.xpm  stick.xpm  stuck.xpm  unshade-pressed.xpm
fluxbox/styles/zukitre-fluxbox2/: theme.cfg
fluxbox/styles/zukitre-fluxbox2/pixmaps/: close-pressed.xpm  close.xpm  max-pressed.xpm  min.xpm  shade.xpm  stuck-pressed.xpm  unshade.xpm
termite/: config
wmalauncher-2020.0124/: AUTHORS  CMakeLists.txt  ChangeLog  LICENSE  README  config.h.in  gen-update-pot-file.sh  init-update-po-files.sh
wmalauncher-2020.0124/conf/: frame-onthefly.conf.in  lighting.conf.in  multi-effects.conf.in  old-school.conf.in  wmaker-style.conf.in
wmalauncher-2020.0124/man/: wmalauncher.1.in
wmalauncher-2020.0124/man/fr/: wmalauncher.1.in
wmalauncher-2020.0124/po/: fr.po  wmalauncher.pot
wmalauncher-2020.0124/src/: cfparser.c  cfparser.h  cmdparser.c  cmdparser.h  command.c  command.h  fileutil.c  fileutil.h  nls.c  nls.h  settings.c  settings.h  wmalauncher.c  wmalhelp.c  wmalhelp.h  wmutil.c  wmutil.h
wmckgmail/: atom  config
wmmenu/: apps  defaults
wmtext-3/: CHANGELOG  INSTALL  LICENCE  Makefile  README  depend  mail  wmtext
wmtext-3/scripts/: acpi_battery  date.sh  memory.sh
wmtext-3/src/: wmtext.c
xpm/: browser.xpm  calendar.xpm  chess.xpm  custom-icons.xpm  file.xpm  firefox.xpm  htop.xpm  menu.xpm  menu2.xpm  start.xpm  taskmanager.xpm  terminal.xpm  terminal2.xpm  terminal3.xpm  update.xpm
